Spacing fixes

--- a/css/hook.css
+++ b/css/hook.css
@@ -5,7 +5,7 @@ div.row      {
 }
 
 body {
- background-image: url("..\\images\\Wallpaper.jpg");
+ background-image: url("..\\images\\diswall.png");
 }
 
 
@@ -74,5 +74,25 @@ button {
 	font-weight: bold;
 	text-align: center;
 	
+}
+
+#webhook {
+	opacity: 0;
+	background: #5865F2;
+	color: black;
+	text-shadow: 0px 2px #3641c0;
+	font-family: Buffalo, Helvetica, monospace;
+    text-align: center;
+	font-size: 30px;
+}
+
+#chook {
+	opacity: 0;
+	background: #5865F2;
+	color: black;
+	text-shadow: 0px 2px #3641c0;
+	font-family: Buffalo, Helvetica, monospace;
+    text-align: center;
+	font-size: 30px;
 }
 
